css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

@font-face {
    font-family: 'odin';
    src: url(./../fonts/Norse-Bold.otf);
}

.container {
    width: 100vw;
    height: 100vh;

    max-width: 100%;

    display: flex;
    flex-wrap: wrap;
}


/*Right side CSS*/
.right-pannel {
    flex: 3 1 auto;

    min-width: 66%;

    border: 1px solid black;
    background-color: brown;
}


/*Left side CSS*/
.left-pannel {
    flex: 1 1 auto;

    min-width: 33%;

    display: flex;
    flex-direction: column;

    background-image: url("./../img/left-background.jpg");
    background-position: center;
    background-size: auto 100%;
}
.logo {
    background-color: rgba(0, 0, 0, 0.5);

    height: 175px;
    width: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: min(10rem, 33%);
}
img {
    height: 140px;
    width: auto;
}
h1 {
    color: white;
    font-family: 'odin', Arial, Helvetica, sans-serif;
    font-size: 8rem;
}
.photo-credit {
    color: white;
    background-color: rgba(0, 0, 0, 0.5);

    align-self: center;
    margin-top: auto;
    padding: 5px 5px 0 5px;
}
a {
    color: white;

}

